--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@200;300;400;500;600&display=swap');
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -14,8 +16,21 @@
   }
 }
 
+*{
+  margin: 0;
+  /* border: 0; */
+  padding: 0;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  /* font-family: "Noto Sans Thai", serif; */
+  width: 100%;
+  height: 100vmin;
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  align-items: center;
 }
