--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,9 +26,9 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  /* font-family: "Noto Sans Thai", serif; */
+  font-family: "Noto Sans Thai", serif; 
   width: 100%;
-  height: 100vmin;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: top;
